- Fix Contact > Addresses doesn't render correctly after moving from TableContainer to Grid system - Add gap and margin to the grid system to render more elegantly - Remove inline grid-gap style from importCSV-Base for two reasons:   1. gap property is defined in CSS, no inline style need   2. grid-gap is obsolete and replaced by 'gap' property

--- a/UI/css/system/global.css
+++ b/UI/css/system/global.css
@@ -700,6 +700,13 @@ h2 {
     grid-template: none / repeat(6, auto);
 }
 
+.two-column-grid,
+.four-column-grid,
+.six-column-grid {
+    gap: 4px;
+    margin: 4px 0;
+}
+
 .two-column-grid lsmb-text,
 .two-column-grid lsmb-password,
 .two-column-grid lsmb-date,
